--- a/setup.cfg
+++ b/setup.cfg
@@ -4,5 +4,5 @@ version = 2024.3.1
 author = Haris Hasic
 author_email = hasic@cb.cs.titech.ac.jp, haris.hasic@elix-inc.com
 description = The chemical reaction compound atom-to-atom mapping repository.
-long_description = file: README.md, LICENSE.txt
+long_description = file: README.md, LICENSE
 keywords = atom-to-atom-mapping, chytorch-rxnmap, epam-indigo, rxnmapper
